--- a/home.html
+++ b/home.html
@@ -1,1 +1,84 @@
+<html>
+  <head>
+    <style>
+      html {
+  font-size: 10px;
+}
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Helvetica Neue', Arial;
+  font-size: 1.6rem;
+  line-height: 1.0;
+  text-align: center;
+  color: #333;
+  margin: 0;
+}
+
+h1 {
+  font-size: 4rem;
+  margin-bottom: 15px ;
+  margin-top: 0 ;
+}
+
+@media (max-width: 460px) {
+  h1 {
+    font-size: 3.5rem;
+    line-height: 1.5;
+  }
+}
+#main {
+  margin: 20px 8px;
+  padding: 15px;
+  border-radius: 5px;
+  background: #eee;
+}
+
+@media (max-width: 460px) {
+  #main {
+    margin: 0;
+  }
+}
+
+#headline {
+  margin: 20px 0;
+  text-align: center;
+}
+.submit-button {
+  width: 10%;
+  padding: 0.75rem;
+  background: rgb(93, 209, 255);
+  color: inherit;
+  border-radius: 2px;
+  cursor: pointer;
+  font-family:sans-serif;
+  border: none;
+}
+.img {
+   width: 250px;
+   height: 250px;
+   border-radius: 50%;
+}
+.form-group {
+  margin-top: 20px;
+}
+    </style>
+  </head>
+<main id="main"> 
+  <h1 id="title">Home Page</h1>
+  <div>
+      <img class="img" src="pict1.jpeg">
+  </div>
+    <p>
+    <h3 id="headline">Salsabilah Azahyrah Putri Alifia</h3>
+        Selamat datang di website pertama saya untuk tugas GitHub 
+      </p>
+      <cite>-- Pelajar Kanesa</cite>
+      <div class="form-group">
+        <a href="contact-us.html"><button type="submit" id="contact-us" class="submit-button">Contact-Us
+        </button></a>
+        <a href="about.html"><button type="submit" id="about" class="submit-button">About
+        </button></a>
+      </div>
+</main>
+</html>
