--- a/about.html
+++ b/about.html
@@ -1,1 +1,116 @@
+<html>
+  <head>
+    <style>
+      html {
+  font-size: 10px;
+}
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+    'Helvetica Neue', Arial;
+  font-size: 1.6rem;
+  line-height: 1.0;
+  text-align: center;
+  color: #333;
+  margin: 0;
+}
+
+h1 {
+  font-size: 4rem;
+  margin-bottom: 15px ;
+  margin-top: 0 ;
+}
+
+@media (max-width: 460px) {
+  h1 {
+    font-size: 3.5rem;
+    line-height: 1.5;
+  }
+}
+#main {
+  margin: 20px 8px;
+  padding: 15px;
+  border-radius: 5px;
+  background: #eee;
+}
+
+@media (max-width: 460px) {
+  #main {
+    margin: 0;
+  }
+}
+
+#headline {
+  margin: 20px 0;
+  text-align: center;
+}
+.submit-button {
+  width: 10%;
+  padding: 0.75rem;
+  background: rgb(93, 209, 255);
+  color: inherit;
+  border-radius: 2px;
+  cursor: pointer;
+  font-family:sans-serif;
+  border: none;
+}
+.img {
+   width: 200px;
+   height: 200px;
+   border-radius: 50%;
+}
+.form-group {
+  margin-top: 20px;
+}
+    </style>
+  </head>
+<main id="main"> 
+  <h1 id="title">About</h1>
+  <div>
+      <img class="img" src="pict1.jpeg">
+  </div>
+    <p>
+    <h3 id="headline">Salsabilah Azahyrah Putri Alifia</h3>
+      </p>
+      <table width="745" border="1" cellspacing="0" cellpadding="5" align="center">
+      <tr align="center" bgcolor="#97A2FF">
+      <td width="174"><b>DATA DIRI</b></td>
+      <td width="353"><b>KETERANGAN</b></td>
+      </tr>
+      <tr>
+      <td>Nama</td>
+      <td>SALSABILAH AZAHYRAH PUTRI ALIFIA</td>
+      </tr>
+      <tr>
+      <td>Jurusan</td>
+      <td>REKAYASA PERANGKAT LUNAK</td>
+      </tr>
+      <tr>
+      <td>Sekolah</td>
+      <td>SMKN 1 KEPANJEN</td>
+      </tr>
+      <tr>
+      <td>Kelas</td>
+      <td>XII RPL 1</td>
+      </tr>
+      <tr>
+      <td>Jenis Kelamin</td>
+      <td>Perempuan</td>
+      </tr>
+      <tr>
+      <td>Tempat/Tanggal Lahir</td>
+      <td>Malang, 14 April 2004</td>
+      </tr>
+      <tr>
+      <td>Alamat</td>
+      <td>Jl. Sidodadi, Pangungrejo - Kepanjen</td>
+      </tr>
+      </table>
+      <div class="form-group">
+        <a href="home.html"><button type="submit" id="home" class="submit-button">Home
+        </button></a>
+        <a href="contact-us.html"><button type="submit" id="about" class="submit-button">Contact-Us
+        </button></a>
+      </div>
+</main>
+</html>
